# robopages-cli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  pyproject.toml  release.py
.github/: renovate.json5
.github/workflows/: docker-build.yml  renovate.yaml  rigging_pr_description.yaml  test.yml
examples/: groq_example.py  nerve.md  ollama.py  ollama_api_example.py  ollama_example.py  openai_example.py  rigging_example.py
examples/robopages/: nmap.yml  sqlmap.yml
examples/robopages/cybersecurity/defensive/incident-response/: splunk.yml
examples/robopages/cybersecurity/offensive/information-gathering/: amass.yml  nmap.yml
examples/robopages/cybersecurity/offensive/web-exploitation/: sqlmap.yml  wpscan.yml
examples/robopages/cybersecurity/reverse-engineering/: symbols.yml
robopages/: __main__.py  api.py  cli.py  defaults.py  docker.py  execution.py  models.py
robopages/cli/: __init__.py
src/: main.rs
src/book/: mod.rs  openai.rs  runtime.rs  templates.rs
src/book/flavors/: mod.rs  nerve.rs  openai.rs  rigging.rs
src/book/templates/: basic.yml  docker_build.yml  docker_image.yml  nmap.Dockerfile
src/cli/: create.rs  install.rs  mod.rs  run.rs  serve.rs  validate.rs  view.rs
src/runtime/: cmd.rs  docker.rs  mod.rs  prompt.rs  ssh.rs
