[package]
name = "robopages"
description = "CLI and API server for Robopages, a YAML based files for describing tools to large language models (LLMs)"
authors = ["Simone Margaritelli (simone@dreadnode.io)"]
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dreadnode/robopages-cli"
homepage = "https://github.com/dreadnode/robopages"
license = "MIT"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
anyhow = "1.0.90"
async-ssh2-tokio = "0.9.0"
camino = { version = "1.1.9", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
glob = "0.3.1"
include_dir = "0.7.4"
lazy-regex = "3.3.0"
log = "0.4.22"
regex = "1.11.0"
reqwest = "0.12.8"
serde = { version = "1.0.211", features = ["derive"] }
serde_yaml = "0.9.34"
shell-escape = "0.1.5"
shellexpand = { version = "3.1.0", features = ["full"] }
tempfile = "3.13.0"
tokio = { version = "1.43.1", features = ["full"] }
which = "8.0.0"
zip = "4.0.0"
