[tool.poetry]
name = "robopages"
version = "0.1.0"
description = ""
authors = ["evilsocket <evilsocket@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"
pydantic-yaml = "^1.3.0"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
robopages = "robopages.cli:cli"
